--- a/Frontend/src/blocks/popup/__error/_visible/popup__error_visible.css
+++ b/Frontend/src/blocks/popup/__error/_visible/popup__error_visible.css
@@ -12,15 +12,15 @@
   margin: 0 0 0 36px;
 }
 
-.popup__error_visible:last-of-type {
-  top: 215px;
-}
-
 @media screen and (max-width: 630px) {
   .popup__error_visible {
     left: -16px;
   }
-  .popup__error_visible:last-of-type {
+  .popup__error_visible-about {
     top: 230px;
   }
+}
+
+.popup__error_visible-about {
+  top: 215px;
 }
