--- a/Frontend/src/blocks/element/element.css
+++ b/Frontend/src/blocks/element/element.css
@@ -14,6 +14,10 @@
   position: relative;
 }
 
+/* .element:last-of-type {
+  margin-bottom: 60px;
+} */
+
 @media screen and (max-width: 320px) {
   .element {
     max-width: 262px;
